--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -24,16 +24,9 @@
 </style>
    </head>
  <body>
-    <h1>筆順プログラムの資料(学習指導案作成時にご活用ください）</h1>
-   <h2><単元について></h2>   
-   <h3>一画ずつ組み立てて漢字を作る</h3>
-     <h4>筆順プログラムプレイ動画</h4>
-            <video controls autoplay  width=85%>
-         <source src="https://tkby.github.io/Learning-by-Viscuit.github.io/video/kakijundemo.MP4" alt="ビスケットで筆順デモ動画">
-           <p>動画を再生するには、videoタグをサポートしたブラウザが必要です。</p>
-         </video>
-      <p>漢字を筆順に沿って一画ずつ書く行為は、コンピュータの「順次」プログラムに似ていて、自分自身にプログラムした漢字の筆順で体を制御して漢字を書くのです。ここで紹介する「筆順プログラム」は、筆順をコンピューターに覚えさせて漢字を再生する活動です。一般的に「人に教えることは自分自身の学びにもなる」とよく言われますが、コンピューターに書き順をプログラミングする中で自分自身の学びを目指す、漢字の新たな学習法の一つです。</p>
-     <ul class="box-list" style="list-style:none;">
+    <h1>マインクラフトで教科横断型の問題解決学習</h1>
+  <p>マインクラフトを活用して，教科横断型の問題解決学習を展開する事例の紹介です。実際に実施した事例をもとに，ポイントをまとめました。</p>
+  <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei2.jpg" alt="マイクラ完成図路上"></div>
  
   <li>
   
