--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -14,10 +14,10 @@
    <meta charset="utf-8">
   <!--6/19viewport仮設定-->
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>国語</title>
+   <title>Minecraftで教科横断型の問題解決学習</title>
    <link rel="stylesheet" href="subject.css" type="text/css">
  <!--レスポンシブデザイン-->
-  <!--6月7日付け加えてみた-->
+ 
 <style type="text/css">
  img{
   text-align:center;
