--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -34,8 +34,8 @@
     <p>マインクラフトを活用して，情報活用能力を育成する活動です。実際に実施した事例をもとに，ポイントをまとめました。</p>
      <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
-             <th width="15%">項目</th>
-             <th width="85%">内容</th>
+             <th width="30%">項目</th>
+             <th width="70%">内容</th>
            </tr>
       <tr>
          <td>学習活動名</td>
@@ -71,7 +71,7 @@
       </tr>
       <tr>
          <td>活動の概要</td>
-         <td>１．事前<br>地域の実態に沿って，長期的な視点で活動</td>
+         <td>１．目標の共有<br>実施事例では「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始しました。</td>
       </tr>
       
       
