--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -70,8 +70,12 @@
          <td>総合的な学習の時間</td>
       </tr>
       <tr>
+         <td>活動設定の背景</td>
+         <td>O県U市で毎年11月に行われる祭りは，城下町が「竹ぼんぼり」でライトアップされる幻想的な祭りであり，県内外から観光客が訪れる。F小学校は，例年，学校行事に「竹ぼんぼり」づくりを組み込んでいたが，2020年度は，コロナ禍により，祭りが中止となった。2021年度も，祭りの開催が危ぶまれ，代替の活動として地域の商店街と祭りをデジタルで表現する活動を設定した。</td>
+      </tr>
+      <tr>
          <td>活動の概要</td>
-         <td>１．目標の共有<br>実施事例では「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始しました。</td>
+         <td><br>１．目標の共有（５月末）<br>実施事例では「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始した。<br>２．情報の収集と店舗の制作（６月～７月）<br>商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していった。</td>
       </tr>
       
       
