--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -78,16 +78,18 @@
          <td>活動の概要</td>
       </tr>
       <tr>
+         <td><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="" width="90%"></td>
          <td>１．目標の共有（５月末）<br>実施事例では「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始した。</td>
-         <td>※画像url</td>
       </tr>
       <tr>
+       <td><img src="https://tkby.github.io/micra.github.io/.jpg" alt=" " width="90%"></td>
        <td>２．情報の収集と店舗の制作（６月～７月）<br>商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していった。</td>
-         <td>※画像url</td>
+        
       </tr> 
       <tr>
-         <td>３．制作物の評価・改善（10月中旬～11月中旬）<br>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィルにし，比較・分析の後，制作物の評価・改善を行った。</td>
-         <td>※画像url</td>
+          <td><img src="https://tkby.github.io/micra.github.io/.jpg" alt=" " width="90%"></td>
+          <td>３．制作物の評価・改善（10月中旬～11月中旬）<br>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィルにし，比較・分析の後，制作物の評価・改善を行った。</td>
+        
       </tr> 
  
    </table>  
