--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -78,11 +78,11 @@
          <td>活動の概要</td>
       </tr>
       <tr>
-         <td><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="" width="100%"></td>
+         <td><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"></td>
          <td>１．目標の共有（５月末）<br>実施事例では「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始した。</td>
       </tr>
       <tr>
-       <td><img src="https://tkby.github.io/micra.github.io/.jpg" alt=" " width="90%"></td>
+       <td><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"></td>
        <td>２．情報の収集と店舗の制作（６月～７月）<br>商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していった。</td>
         
       </tr> 
