--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -43,7 +43,7 @@
       </tr>
       <tr>
          <td>学年</td>
-         <td>小学校高学年～高校生</td>
+         <td>小学校高学年～高校生位まで可能</td>
       </tr>
       <tr>
          <td>目標</td>
@@ -51,7 +51,7 @@
       </tr>
       <tr>
          <td>使用教材（ホスト機）</td>
-         <td>Windows版Minecraft( ※Java版ではない)をインストールしたPC</td>
+         <td>Windows版Minecraft( ※Java版ではない)をインストールしたPC<br><img src="https://tkby.github.io/micra.github.io/.jpg" alt="Win版Minecraft" width="50%"></td>
       </tr>
       <tr>
          <td>使用教材（制作用）</td>
