--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -51,11 +51,11 @@
       </tr>
       <tr>
          <td>使用教材（ホスト機）</td>
-         <td>Windows版Minecraft( ※Java版ではない)をインストールしたPC<br><img src="https://tkby.github.io/micra.github.io/.jpg" alt="Win版Minecraft" width="50%"></td>
+         <td>Windows版Minecraft( ※Java版ではない)をインストールしたPC<br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="50%"></td>
       </tr>
       <tr>
          <td>使用教材（制作用）</td>
-         <td>MinecraftをインストールしたiPad</td>
+         <td>MinecraftをインストールしたiPad<br><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
       </tr>
       <tr>
          <td>使用教材（情報収集用）</td>
