--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -50,12 +50,12 @@
          <td>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。</td>
       </tr>
       <tr>
-         <td>使用教材（ホスト機）</td>
-         <td>Windows版Minecraft( ※Java版ではない)をインストールしたPC<br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="50%"></td>
+         <td>使用教材（ホスト機）<br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="30%"></td>
+         <td>Windows版Minecraft( ※Java版ではない)をインストールしたPC</td>
       </tr>
       <tr>
-         <td>使用教材（制作用）</td>
-         <td>MinecraftをインストールしたiPad<br><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
+         <td>使用教材（制作用）<br><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="30%"></td>
+         <td>MinecraftをインストールしたiPad</td>
       </tr>
       <tr>
          <td>使用教材（情報収集用）</td>
