--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -87,7 +87,7 @@
         
       </tr> 
       <tr>
-          <td><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"></td>
+          <td><img src="https://tkby.github.io/micra.github.io/sala・de.jpg" alt="サーラ・デ・マイクラ " width="100%"><br><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"><br><img src="https://tkby.github.io/micra.github.io/takeyoihaccho.jpg" alt="竹宵八町マイクラ " width="100%"></td>
           <td>３．制作物の評価・改善（10月中旬～11月中旬）<br>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィルにし，比較・分析の後，制作物の評価・改善を行った。</td>
         
       </tr> 
