--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -83,7 +83,7 @@
        </td>
       </tr>
       <tr>
-        <td><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="パフォーマンス" width="100%"></td>
+        <td><img src="https://tkby.github.io/micra.github.io/performance." alt="パフォーマンス" width="100%"></td>
        <td>１．２　意識づけ<br>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行った。</td>
       </tr>
       <tr>
