--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -79,16 +79,20 @@
       </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="ルーブリックによるパフォーマンス評価" width="100%"></td>
-       <td>１．１　目標の共有（５月末）<br>実施事例では「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始した。<br>１．２　意識づけ<br>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行った。</td>
+       <td>１　課題提示<br>１．１　目標の共有（５月末）<br>実施事例では「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始した。<br>１．２　意識づけ<br>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行った。</td>
        </td>
       </tr>
       <tr>
+       <td><img src="https://tkby.github.io/micra.github.io/sagyo.jpg" alt="作業風景" width="100%"></td>
+       <td>２ 制作活動<br>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）：商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していった。</td>
+      </tr>
+      <tr>
          <td><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"><br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
-         <td>２.１情報の収集と店舗の制作（６月）<br>商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していった。</td>
+         <td>進捗状況（６月）<br>１店舗は10ブロック×10ブロック×10ブロックを目安にして制作に取り掛かった。</td>
       </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
-       <td>２．２情報の収集と店舗の制作（７月）<br>商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していった。</td>  
+       <td>進捗状況（７月）<br>作業に慣れている児童が担当した店舗は完成に近づいている</td>  
       </tr> 
       <tr>
           <td><img src="https://tkby.github.io/micra.github.io/sala・de.jpg" alt="サーラ・デ・マイクラ " width="100%"><br><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"><br><img src="https://tkby.github.io/micra.github.io/takeyoihaccho.jpg" alt="竹宵八町マイクラ " width="100%"></td>
