--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -83,7 +83,7 @@
        </td>
       </tr>
       <tr>
-       <td><img src="https://tkby.github.io/micra.github.io/sagyo.jpg" alt="作業風景" width="100%"></td>
+       <td><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
        <td>２ 制作活動<br>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）：商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していった。</td>
       </tr>
       <tr>
