--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -51,11 +51,11 @@
       </tr>
       <tr>
          <td>使用教材（ホスト機）<br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="30%"></td>
-         <td>Windows版Minecraft( ※Java版ではない)をインストールしたPC</td>
+         <td>Windows版Minecraft( ※Java版ではない)をインストールしたPC<br>Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
       </tr>
       <tr>
          <td>使用教材（制作用）<br><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
-         <td>MinecraftをインストールしたiPad</td>
+         <td>MinecraftをインストールしたiPad<br>Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
       </tr>
       <tr>
          <td>使用教材（情報収集用）</td>
