--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -51,11 +51,11 @@
       </tr>
       <tr>
          <td>使用教材（ホスト機）<br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="30%"></td>
-         <td>Windows版Minecraft( ※Java版ではない)をインストールしたPC<br>Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
+         <td>Windows版Minecraft( ※Java版ではない)をインストールしたPC<br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
       </tr>
       <tr>
          <td>使用教材（制作用）<br><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
-         <td>MinecraftをインストールしたiPad<br>Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
+         <td>MinecraftをインストールしたiPad<br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
       </tr>
       <tr>
          <td>使用教材（情報収集用）</td>
@@ -88,7 +88,7 @@
       </tr>
       <tr>
          <td><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"><br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
-         <td>進捗状況（６月）<br>１店舗は10ブロック×10ブロック×10ブロックを目安にして制作に取り掛かった。</td>
+         <td>進捗状況（６月）<br>１店舗は10ブロック×10ブロック×10ブロックを目安にして制作に取り掛かった。<br>※商店街の区画は教師サイドで準備し，児童には町のマップと担当の店舗を伝えた。</td>
       </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
