--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -47,7 +47,7 @@
       </tr>
       <tr>
          <td>目標</td>
-         <td>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。</td>
+         <td>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう。</td>
       </tr>
       <tr>
          <td>使用教材（ホスト機）<br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="30%"></td>
@@ -71,7 +71,7 @@
       </tr>
       <tr>
          <td>活動設定の背景</td>
-         <td>O県U市で毎年11月に行われる祭りは，城下町が「竹ぼんぼり」でライトアップされる幻想的な祭りであり，県内外から観光客が訪れる。F小学校は，例年，学校行事に「竹ぼんぼり」づくりを組み込んでいたが，2020年度は，コロナ禍により，祭りが中止となった。2021年度も，祭りの開催が危ぶまれ，代替の活動として地域の商店街と祭りをデジタルで表現する活動を設定した。</td>
+         <td>O県U市で毎年11月に行われる祭りは，城下町が「竹ぼんぼり」でライトアップされる幻想的な祭りであり，県内外から観光客が訪れる。F小学校は，例年，学校行事に「竹ぼんぼり」づくりを組み込んでいたが，2020年度は，コロナ禍により，祭りが中止となった。2021年度も，祭りの開催が危ぶまれ，代替の活動として地域の商店街と祭りをデジタルで表現する活動を設定した。活動が終了する11月半ばに，制作物をプロジェクターで校舎に投影し，鑑賞する。</td>
       </tr>
         <tr>
          <td>活動の様子</td>
@@ -95,10 +95,13 @@
        <td>進捗状況（７月）<br>作業に慣れている児童が担当した店舗は完成に近づいている</td>  
       </tr> 
       <tr>
-          <td><img src="https://tkby.github.io/micra.github.io/sala・de.jpg" alt="サーラ・デ・マイクラ " width="100%"><br><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"><br><img src="https://tkby.github.io/micra.github.io/takeyoihaccho.jpg" alt="竹宵八町マイクラ " width="100%"></td>
-          <td>３．店舗の制作・制作物の評価・改善（10月中旬～11月中旬）<br>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィルにし，比較・分析の後，制作物の評価・改善を行った。</td>
+          <td><img src="https://tkby.github.io/micra.github.io/sala・de.jpg" alt="サーラ・デ・マイクラ " width="100%"><br><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"></td>
+          <td>３．制作物の評価・改善（10月中旬～11月上旬）<br>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィルにし，比較・分析の後，制作物の評価・改善を行った。</td>
       </tr> 
- 
+      <tr>
+          <td><img src="https://tkby.github.io/micra.github.io/takeyoihaccho.jpg" alt="竹宵八町マイクラ " width="100%"></tr>
+          <td>４.完成した商店街で祭りを表現する（11月中旬）<br>商店街の完成後，祭りの雰囲気を出すために，商店街を灯りで飾った。時間を夜に設定して，マルチプレイで祭りを楽しんだ。<br>※実際の祭りが中止にならなかったため，当初予定していた校舎に投影するイベントは行わなかった。</tr>
+      </tr>
    </table>  
         
  </li>
