--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -71,7 +71,7 @@
       </tr>
       <tr>
          <td>活動設定の背景</td>
-         <td>O県U市で毎年11月に行われる祭りは，城下町が「竹ぼんぼり」でライトアップされる幻想的な祭りであり，県内外から観光客が訪れる。F小学校は，例年，学校行事に「竹ぼんぼり」づくりを組み込んでいたが，2020年度は，コロナ禍により，祭りが中止となった。2021年度も，祭りの開催が危ぶまれ，代替の活動として地域の商店街と祭りをデジタルで表現する活動を設定した。活動が終了する11月半ばに，制作物をプロジェクターで校舎に投影し，鑑賞する。</td>
+         <td>O県U市で毎年11月に行われる祭りは，城下町が「竹ぼんぼり」でライトアップされる幻想的な祭りであり，県内外から観光客が訪れる。F小学校は，例年，学校行事に「竹ぼんぼり」づくりを組み込んでいたが，2020年度は，コロナ禍により，祭りが中止となった。2021年度も，祭りの開催が危ぶまれ，代替の活動として地域の商店街と祭りをデジタルで表現する活動を設定した。活動が終了する11月半ばに，祭りの雰囲気を味わうために制作物をプロジェクターで校舎に投影し，鑑賞する。</td>
       </tr>
         <tr>
          <td>活動の様子</td>
@@ -100,7 +100,7 @@
       </tr> 
       <tr>
           <td><img src="https://tkby.github.io/micra.github.io/takeyoihaccho.jpg" alt="竹宵八町マイクラ " width="100%"></tr>
-          <td>４.完成した商店街で祭りを表現する（11月中旬）<br>商店街の完成後，祭りの雰囲気を出すために，商店街を灯りで飾った。時間を夜に設定して，マルチプレイで祭りを楽しんだ。<br>※実際の祭りが中止にならなかったため，当初予定していた校舎に投影するイベントは行わなかった。</tr>
+          <td>４.完成した商店街で祭りを表現する（11月中旬）<br>商店街の完成後，祭りの雰囲気を出すために，商店街を灯りで飾った。時間を夜に設定して，マルチプレイで祭りを楽しんだ。<br>※実際の祭りが2021年度は規模縮小ながら例年通り実施されることが分かり，１０月以降の活動の中心は例年通り「竹ぼんぼり作り」に戻った。よって，当初予定していた校舎に投影するイベントは行わなかった。</tr>
       </tr>
    </table>  
         
