--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -95,11 +95,11 @@
        <td>進捗状況（７月）<br>作業に慣れている児童が担当した店舗は完成に近づいている</td>  
       </tr> 
       <tr>
-          <td><img src="https://tkby.github.io/micra.github.io/sala・de.jpg" alt="サーラ・デ・マイクラ " width="100%"><br><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"></td>
+          <td><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"></td>
           <td>３．制作物の評価・改善（10月中旬～11月上旬）<br>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィールにし，比較・分析の後，制作物の評価・改善を行った。</td>
       </tr> 
       <tr>
-          <td><img src="https://tkby.github.io/micra.github.io/takeyoihaccho.jpg" alt="竹宵八町マイクラ " width="100%"></td>
+          <td><img src="https://tkby.github.io/micra.github.io/sala・de.jpg" alt="サーラ・デ・マイクラ " width="100%"><br><img src="https://tkby.github.io/micra.github.io/takeyoihaccho.jpg" alt="竹宵八町マイクラ " width="100%"></td>
           <td>４.完成した商店街で祭りを表現する（11月中旬）<br>商店街の完成後，祭りの雰囲気を出すために，商店街を灯りで飾った。時間を夜に設定して，マルチプレイで祭りを楽しんだ。<br>※実際の祭りが2021年度は規模縮小ながら例年通り実施されることが分かり，１０月以降の活動の中心は例年通り「竹ぼんぼり作り」に戻った。よって，当初予定していた校舎に投影するイベントは行わなかった。</td>
       </tr>
    </table>  
