--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -88,7 +88,7 @@
       </tr>
       <tr>
          <td><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"><br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
-         <td>進捗状況（６月）<br>１店舗は10ブロック×10ブロック×10ブロックを目安にして制作に取り掛かった。<br>※商店街の区画は教師サイドで準備し，児童には町のマップと担当の店舗を伝えた。</td>
+         <td>進捗状況（６月）<br>商店街の区画は教師サイドで準備し，児童には町のマップと担当の店舗を伝えた。店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入った。</td>
       </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
