--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -82,9 +82,13 @@
        <td>１　課題提示<br>１．１　目標の共有（５月末）<br>実施事例では「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始した。<br>１．２　意識づけ<br>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行った。</td>
        </td>
       </tr>
-      <tr>
+  <tr>
+   <td><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="50%"><br><img src="https://tkby.github.io/micra.github.io/players25set.jpg" alt="プレイヤー25人成功" width="50%"></td>
+   <td>設定について<br>コマンドで「/setmaxplaers 数字」と入力すると数字の人数までマルチプレイができるようになります。※有効な数字は１以上４０以下です。</td> 
+  </tr>
+       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
-       <td>２ 制作活動<br>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）：商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していった。<br>設定について<br>コマンドで「/setmaxplaers 数字」と入力すると数字の人数までマルチプレイができるようになります。※有効な数字は１以上４０以下です。<br><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="50%"><br><img src="https://tkby.github.io/micra.github.io/players25set.jpg" alt="プレイヤー25人成功" width="50%"></td>
+       <td>２ 制作活動<br>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）：商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していった。</td>
       </tr>
       <tr>
          <td><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"><br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
