--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -83,7 +83,7 @@
        </td>
       </tr>
   <tr>
-   <td><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="50%"><br><img src="https://tkby.github.io/micra.github.io/players25set.jpg" alt="プレイヤー25人成功" width="50%"></td>
+   <td><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
    <td>設定について<br>コマンドで「/setmaxplaers 数字」と入力すると数字の人数までマルチプレイができるようになります。※有効な数字は１以上４０以下です。</td> 
   </tr>
        <tr>
