--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -43,11 +43,11 @@
       </tr>
       <tr>
          <td>学年</td>
-         <td>小学校高学年～高校生位まで可能</td>
+         <td>小学校高学年～高校生位まで可能です。</td>
       </tr>
       <tr>
          <td>目標</td>
-         <td>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう。</td>
+         <td>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!</td>
       </tr>
       <tr>
          <td>使用教材（ホスト機）<br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="30%"></td>
@@ -71,7 +71,7 @@
       </tr>
       <tr>
          <td>活動設定の背景</td>
-         <td>O県U市で毎年11月に行われる祭りは，城下町が「竹ぼんぼり」でライトアップされる幻想的な祭りであり，県内外から観光客が訪れる。F小学校は，例年，学校行事に「竹ぼんぼり」づくりを組み込んでいたが，2020年度は，コロナ禍により，祭りが中止となった。2021年度も，祭りの開催が危ぶまれ，代替の活動として地域の商店街と祭りをデジタルで表現する活動を設定した。活動が終了する11月半ばに，祭りの雰囲気を味わうために制作物をプロジェクターで校舎に投影し，鑑賞する。</td>
+         <td>O県U市で毎年11月に行われる祭りは，城下町が「竹ぼんぼり」でライトアップされる幻想的な祭りであり，県内外から観光客が訪れます。F小学校は，例年，学校行事に「竹ぼんぼり」づくりを組み込んでいましたが，2020年度は，コロナ禍により，祭りが中止となりました。2021年度も，祭りの開催が危ぶまれたので，代替の活動として地域の商店街と祭りをデジタルで表現する活動を設定しました。11月半ばに，マインクラフトで作った商店街を飾りつけプロジェクターで校舎に投影し，「デジタル祭り」を鑑賞して活動は終了です。</td>
       </tr>
         <tr>
          <td>活動の様子</td>
