--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -79,7 +79,7 @@
       </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="ルーブリックによるパフォーマンス評価" width="100%"></td>
-       <td>１　課題提示<br>１．１　目標の共有（５月末）<br>実施事例では「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始した。<br>１．２　意識づけ<br>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行った。</td>
+       <td>１　課題提示<br>１．１　目標の共有（５月末）<br>実施事例では「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始しました。<br>１．２　意識づけ<br>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</td>
        </td>
       </tr>
   <tr>
@@ -88,23 +88,23 @@
   </tr>
        <tr>
        <td><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
-       <td>２ 制作活動<br>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）：商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していった。</td>
+       <td>２ 制作活動<br>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）：商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していきました。</td>
       </tr>
       <tr>
          <td><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"><br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
-         <td>進捗状況（６月）<br>商店街の区画は教師サイドで準備し，児童には町のマップと担当の店舗を伝えた。店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入った。</td>
+         <td>進捗状況（６月）<br>商店街の区画は教師サイドで準備し，児童には町のマップと担当の店舗を伝えた。店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</td>
       </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
-       <td>進捗状況（７月）<br>作業に慣れている児童が担当した店舗は完成に近づいている</td>  
+       <td>進捗状況（７月）<br>作業に慣れている児童が担当した店舗は，完成に近づいているのが分かります。</td>  
       </tr> 
       <tr>
           <td><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"></td>
-          <td>３．制作物の評価・改善（10月中旬～11月上旬）<br>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィールにし，比較・分析の後，制作物の評価・改善を行った。</td>
+          <td>３．制作物の評価・改善（10月中旬～11月上旬）<br>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィールにし，比較・分析の後，制作物の評価・改善を行いました。</td>
       </tr> 
       <tr>
           <td><img src="https://tkby.github.io/micra.github.io/sala・de.jpg" alt="サーラ・デ・マイクラ " width="100%"><br><img src="https://tkby.github.io/micra.github.io/takeyoihaccho.jpg" alt="竹宵八町マイクラ " width="100%"></td>
-          <td>４.完成した商店街で祭りを表現する（11月中旬）<br>商店街の完成後，祭りの雰囲気を出すために，商店街を灯りで飾った。時間を夜に設定して，マルチプレイで祭りを楽しんだ。<br>※実際の祭りが2021年度は規模縮小ながら例年通り実施されることが分かり，１０月以降の活動の中心は例年通り「竹ぼんぼり作り」に戻った。よって，当初予定していた校舎に投映するイベントは行わなかった。</td>
+          <td>４.完成した商店街で祭りを表現しました（11月中旬）。<br>商店街の完成後，祭りの雰囲気を出すために，商店街を「緑のろうそく」等で飾りつけをしました。時間を夜に設定して，19人～21人のマルチプレイで商店街を散策して祭りを楽しみました。<br>※実際の祭りが2021年度は規模縮小ながら例年通り実施されることが分かり，１０月以降の活動の中心は例年通り「竹ぼんぼり作り」に戻ったため，当初予定していた校舎に投映するイベントは行いませんでした。</td>
       </tr>
    </table>  
         
