--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -58,8 +58,8 @@
          <td>MinecraftをインストールしたiPad<br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
       </tr>
       <tr>
-         <td>使用教材（情報収集用）<br>担当する店舗についてグーグルアースやグーグルマップで調べた情報を，ロイロノートスクールにスクショやWebカード等で保存していきました。</td>
-         <td>iPad(キーボード付きGiga端末）</td>
+         <td>使用教材（情報収集用）</td>
+         <td>iPad(キーボード付きGiga端末）<br>担当する店舗についてグーグルアースやグーグルマップで調べた情報を，ロイロノートスクールにスクショやWebカード等で保存していきました。</td>
       </tr>
       <tr>
          <td>環境</td>
