--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -59,7 +59,7 @@
       </tr>
       <tr>
          <td>使用教材（情報収集用）</td>
-         <td>iPad(キーボード付きGiga端末）<br>担当する店舗についてグーグルアースやグーグルマップで調べた情報を，ロイロノートスクールにスクショやWebカード等で保存していきました。</td>
+         <td>iPad(キーボード付きGIGAスクール端末）<br>担当する店舗についてグーグルアースやグーグルマップで調べた情報を，ロイロノートスクールにスクショやWebカード等で保存していきました。</td>
       </tr>
       <tr>
          <td>環境</td>
