--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -39,72 +39,72 @@
            </tr>
       <tr>
          <td>学習活動名</td>
-         <td>「地域の祭りと商店街をデジタルで表現しよう」</td>
+       <td><b>「地域の祭りと商店街をデジタルで表現しよう」</b></td>
       </tr>
       <tr>
          <td>学年</td>
-         <td>小学校高学年～高校生位まで可能です。</td>
+       <td><b>小学校高学年～高校生位</b>まで可能です。</td>
       </tr>
       <tr>
          <td>目標</td>
          <td>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!</td>
       </tr>
       <tr>
-         <td>使用教材（ホスト機）<br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="30%"></td>
-         <td>Windows版Minecraft( ※Java版ではない)をインストールしたPC<br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
+       <td><b>使用教材（ホスト機）</b><br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="30%"></td>
+       <td>Windows版Minecraft( ※Java版ではない)をインストールしたPC<br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
       </tr>
       <tr>
-         <td>使用教材（制作用）<br><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
+         <td><b>使用教材（制作用）<br><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
          <td>MinecraftをインストールしたiPad<br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
       </tr>
       <tr>
-         <td>使用教材（情報収集用）</td>
+         <td><b>使用教材（情報収集用）</b></td>
          <td>iPad(キーボード付きGIGAスクール端末）<br>担当する店舗についてグーグルアースやグーグルマップで調べた情報を，ロイロノートスクールにスクショやWebカード等で保存していきました。</td>
       </tr>
       <tr>
-         <td>環境</td>
+         <td><b>環境</b></td>
          <td>1人～2人に1台制作用iPadと情報収集用iPad</td>
       </tr>
       <tr>
-         <td>教科・領域</td>
+         <td><b>教科・領域</b></td>
          <td>総合的な学習の時間</td>
       </tr>
       <tr>
-         <td>活動設定の背景</td>
+         <td><b>活動設定の背景</b></td>
          <td>O県U市で毎年11月に行われる祭りは，城下町が「竹ぼんぼり」でライトアップされる幻想的な祭りであり，県内外から観光客が訪れます。F小学校は，例年，学校行事に「竹ぼんぼり」づくりを組み込んでいましたが，2020年度は，コロナ禍により，祭りが中止となりました。2021年度も，祭りの開催が危ぶまれたので，代替の活動として地域の商店街と祭りをデジタルで表現する活動を設定しました。11月半ばに，マインクラフトで作った商店街を飾りつけプロジェクターで校舎に投映し，「デジタル祭り」を鑑賞して活動は終了です。</td>
       </tr>
         <tr>
-         <td>活動の様子</td>
-         <td>活動の概要</td>
+         <td><b>活動の様子</b></td>
+         <td><b>活動の概要</b></td>
       </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="ルーブリックによるパフォーマンス評価" width="100%"></td>
-       <td>１　課題提示<br>１．１　目標の共有（５月末）<br>実施事例では「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始しました。<br>１．２　意識づけ<br>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</td>
+       <td><b>１　課題提示</b><br>１．１　目標の共有（５月末）<br>実施事例では「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始しました。<br>１．２　意識づけ<br>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</td>
        </td>
       </tr>
   <tr>
    <td><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
-   <td>設定について<br>町づくり活動をマルチプレイで行う場合，同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。コマンドが入力できるのは「オペレーター」のみです。<br>入力方法<br>PCの場合は「T」キーを押すとコマンド入力できます。下部の歯車の横に「/setmaxplayers 数字」と入力すると数字の人数までマルチプレイができるようになります。※有効な数字は１以上４０以下です。</td> 
+   <td><b>設定について</b><br>町づくり活動をマルチプレイで行う場合，同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。コマンドが入力できるのは「オペレーター」のみです。<br>入力方法<br>PCの場合は「T」キーを押すとコマンド入力できます。下部の歯車の横に「/setmaxplayers 数字」と入力すると数字の人数までマルチプレイができるようになります。※有効な数字は１以上４０以下です。</td> 
   </tr>
        <tr>
        <td><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
-       <td>２ 制作活動<br>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）：商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していきました。</td>
+       <td><b>２ 制作活動</b><br>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）：商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していきました。</td>
       </tr>
       <tr>
          <td><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"><br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
-         <td>進捗状況（６月）<br>商店街の区画は教師サイドで準備し，児童には町のマップと担当の店舗を伝えた。店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</td>
+         <td><b>進捗状況（６月）</b><br>商店街の区画は教師サイドで準備し，児童には町のマップと担当の店舗を伝えた。店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</td>
       </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
-       <td>進捗状況（７月）<br>作業に慣れている児童が担当した店舗は，完成に近づいているのが分かります。</td>  
+       <td><b>進捗状況（７月）</b><br>作業に慣れている児童が担当した店舗は，完成に近づいているのが分かります。</td>  
       </tr> 
       <tr>
           <td><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"></td>
-          <td>３．制作物の評価・改善（10月中旬～11月上旬）<br>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィールにし，比較・分析の後，制作物の評価・改善を行いました。</td>
+          <td><b>３．制作物の評価・改善（10月中旬～11月上旬）</b><br>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィールにし，比較・分析の後，制作物の評価・改善を行いました。</td>
       </tr> 
       <tr>
           <td><img src="https://tkby.github.io/micra.github.io/sala・de.jpg" alt="サーラ・デ・マイクラ " width="100%"><br><img src="https://tkby.github.io/micra.github.io/takeyoihaccho.jpg" alt="竹宵八町マイクラ " width="100%"></td>
-          <td>４.完成した商店街で祭りを表現しました（11月中旬）。<br>商店街の完成後，祭りの雰囲気を出すために，商店街を「緑のろうそく」等で飾りつけをしました。時間を夜に設定して，19人～21人のマルチプレイで商店街を散策して祭りを楽しみました。<br>※実際の祭りが2021年度は規模縮小ながら例年通り実施されることが分かり，１０月以降の活動の中心は例年通り「竹ぼんぼり作り」に戻りました。そのため，当初予定していた校舎に投映するイベントは行いませんでした。</td>
+          <td><b>４.完成した商店街で祭りを表現（11月中旬）</b><br>商店街の完成後，祭りの雰囲気を出すために，商店街を「緑のろうそく」等で飾りつけをしました。時間を夜に設定して，19人～21人のマルチプレイで商店街を散策して祭りを楽しみました。<br>※実際の祭りが2021年度は規模縮小ながら例年通り実施されることが分かり，１０月以降の活動の中心は例年通り「竹ぼんぼり作り」に戻りました。そのため，当初予定していた校舎に投映するイベントは行いませんでした。</td>
       </tr>
    </table>  
         
