--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -34,8 +34,8 @@
     <p>マインクラフトを活用して，情報活用能力を育成する活動です。実際に実施した事例をもとに，ポイントをまとめました。</p>
      <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
-             <th width="40%">項目</th>
-             <th width="60%">内容</th>
+             <th width="40%"><b>項目</b></th>
+             <th width="60%"><b>内容</b></th>
            </tr>
       <tr>
          <td>学習活動名</td>
@@ -51,23 +51,23 @@
       </tr>
       <tr>
        <td><b>使用教材（ホスト機）</b><br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="30%"></td>
-       <td>Windows版Minecraft( ※Java版ではない)をインストールしたPC<br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
+       <td><b>Windows版Minecraft( ※Java版ではない)をインストールしたPC</b><br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
       </tr>
       <tr>
          <td><b>使用教材（制作用）<br><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
-         <td>MinecraftをインストールしたiPad<br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
+         <td<b>>MinecraftをインストールしたiPad</b><br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
       </tr>
       <tr>
          <td><b>使用教材（情報収集用）</b></td>
-         <td>iPad(キーボード付きGIGAスクール端末）<br>担当する店舗についてグーグルアースやグーグルマップで調べた情報を，ロイロノートスクールにスクショやWebカード等で保存していきました。</td>
+         <td><b>iPad(キーボード付きGIGAスクール端末）</b><br>担当する店舗についてグーグルアースやグーグルマップで調べた情報を，ロイロノートスクールにスクショやWebカード等で保存していきました。</td>
       </tr>
       <tr>
          <td><b>環境</b></td>
-         <td>1人～2人に1台制作用iPadと情報収集用iPad</td>
+         <td>1人～2人に1台<b>制作用iPadと情報収集用iPad</b></td>
       </tr>
       <tr>
          <td><b>教科・領域</b></td>
-         <td>総合的な学習の時間</td>
+         <td><b>総合的な学習の時間</b></td>
       </tr>
       <tr>
          <td><b>活動設定の背景</b></td>
