--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -39,7 +39,7 @@
            </tr>
       <tr>
          <td>学習活動名</td>
-       <td><b>「地域の祭りと商店街をデジタルで表現しよう」</b></td>
+       <td>「地域の祭りと商店街をデジタルで表現しよう」/td>
       </tr>
       <tr>
          <td>学年</td>
@@ -50,27 +50,27 @@
          <td>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!</td>
       </tr>
       <tr>
-       <td><b>使用教材（ホスト機）</b><br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="30%"></td>
+       <td>使用教材（ホスト機）<br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="30%"></td>
        <td><b>Windows版Minecraft( ※Java版ではない)をインストールしたPC</b><br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
       </tr>
       <tr>
-         <td><b>使用教材（制作用）<br><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
+         <td>使用教材（制作用）<img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
          <td<b>>MinecraftをインストールしたiPad</b><br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
       </tr>
       <tr>
-         <td><b>使用教材（情報収集用）</b></td>
+         <td>使用教材（情報収集用）</td>
          <td><b>iPad(キーボード付きGIGAスクール端末）</b><br>担当する店舗についてグーグルアースやグーグルマップで調べた情報を，ロイロノートスクールにスクショやWebカード等で保存していきました。</td>
       </tr>
       <tr>
-         <td><b>環境</b></td>
+         <td>環境</td>
          <td>1人～2人に1台<b>制作用iPadと情報収集用iPad</b></td>
       </tr>
       <tr>
-         <td><b>教科・領域</b></td>
+         <td>教科・領域</td>
          <td><b>総合的な学習の時間</b></td>
       </tr>
       <tr>
-         <td><b>活動設定の背景</b></td>
+         <td>活動設定の背景</td>
          <td>O県U市で毎年11月に行われる祭りは，城下町が「竹ぼんぼり」でライトアップされる幻想的な祭りであり，県内外から観光客が訪れます。F小学校は，例年，学校行事に「竹ぼんぼり」づくりを組み込んでいましたが，2020年度は，コロナ禍により，祭りが中止となりました。2021年度も，祭りの開催が危ぶまれたので，代替の活動として地域の商店街と祭りをデジタルで表現する活動を設定しました。11月半ばに，マインクラフトで作った商店街を飾りつけプロジェクターで校舎に投映し，「デジタル祭り」を鑑賞して活動は終了です。</td>
       </tr>
         <tr>
