--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -55,7 +55,7 @@
       </tr>
       <tr>
          <td>使用教材（制作用）<img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
-         <td<b>>MinecraftをインストールしたiPad</b><br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
+         <td><b>MinecraftをインストールしたiPad</b><br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
       </tr>
       <tr>
          <td>使用教材（情報収集用）</td>
