--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -67,7 +67,7 @@
       </tr>
       <tr>
          <td>教科・領域</td>
-         <td><b>総合的な学習の時間</b></td>
+         <td><b>総合的な学習の時間(探究的な学習）</b></td>
       </tr>
       <tr>
          <td>活動設定の背景</td>
