--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -96,7 +96,7 @@
       </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
-       <td><b>進捗状況（７月）</b><br>作業に慣れている児童が担当した店舗は，完成に近づいているのが分かります。</td>  
+       <td><b>進捗状況（７月）</b><br>作業が進んでいる児童が担当している店舗は，完成に近づいているのが分かります。</td>  
       </tr> 
       <tr>
           <td><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"></td>
