--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -54,7 +54,7 @@
        <td><b>Windows版Minecraft( ※Java版ではない)をインストールしたPC</b><br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
       </tr>
       <tr>
-         <td>使用教材（制作用）<img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
+         <td>使用教材（制作用）<br><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
          <td><b>MinecraftをインストールしたiPad</b><br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
       </tr>
       <tr>
