--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -84,7 +84,7 @@
       </tr>
   <tr>
    <td><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
-   <td><b>設定について</b><br>ワールド:フラット<br>ゲームモード:クリエイティブ<br>難易度:ピース<br>その他:座標を表示オン/TNTオフ/火の延焼オフ/あとはお好みで設定してください。<br>マルチプレイについて<br>町づくり活動をマルチプレイで行う場合，同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。コマンドが入力できるのは「オペレーター」のみです。<br><b>入力方法</b><br>PCの場合は「T」キーを押すとコマンド入力できます。下部の歯車の横に「/setmaxplayers 数字」と入力すると数字の人数までマルチプレイができるようになります。※有効な数字は１以上４０以下です。</td> 
+   <td><b>設定について</b><br>ワールド:フラット<br>ゲームモード:クリエイティブ<br>難易度:ピース<br>その他:座標を表示オン/TNTオフ/火の延焼オフ/あとはお好みで設定してください。<br><b>マルチプレイについて</b><br>町づくり活動をマルチプレイで行う場合，同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。コマンドが入力できるのは「オペレーター」のみです。<br><b>入力方法</b><br>PCの場合は「T」キーを押すとコマンド入力できます。下部の歯車の横に「/setmaxplayers 数字」と入力すると数字の人数までマルチプレイができるようになります。※有効な数字は１以上４０以下です。</td> 
   </tr>
        <tr>
        <td><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
