--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -51,15 +51,15 @@
       </tr>
       <tr>
        <td>使用教材（ホスト機）<br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="30%"></td>
-       <td><b>Windows版Minecraft( ※Java版ではない)をインストールしたPC</b><br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
+       <td><b>Windows版Minecraft( ※Java版ではない)をインストールしたPC</b><br><ul><li>Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。<li>統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</ul></td>
       </tr>
       <tr>
          <td>使用教材（制作用）<br><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
-         <td><b>MinecraftをインストールしたiPad</b><br>※Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</td>
+         <td><b>MinecraftをインストールしたiPad</b><br><ul><li>Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。<li>統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</ul></td>
       </tr>
       <tr>
          <td>使用教材（情報収集用）</td>
-         <td><b>iPad(キーボード付きGIGAスクール端末）</b><br>担当する店舗についてグーグルアースやグーグルマップで調べた情報を，ロイロノートスクールにスクショやWebカード等で保存していきました。</td>
+         <td><b>iPad(キーボード付きGIGAスクール端末）</b><br><ul><li>担当する店舗についてグーグルアースやグーグルマップで調べた情報を，ロイロノートスクールにスクショやWebカード等で保存していきました。</ul></td>
       </tr>
       <tr>
          <td>環境</td>
@@ -79,7 +79,7 @@
       </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="ルーブリックによるパフォーマンス評価" width="100%"></td>
-       <td><b>１　課題提示</b><br>１．１　目標の共有（５月末）<br>実施事例では「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始しました。<br>１．２　意識づけ<br>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</td>
+       <td><b>１　課題提示</b><br><ul><li>１.目標の共有（５月末）<br>実施事例では「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始しました。<li>２.意識づけ<br>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</ul></td>
        </td>
       </tr>
   <tr>
@@ -88,23 +88,23 @@
   </tr>
        <tr>
        <td><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
-       <td><b>２ 制作活動</b><br>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）：商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していきました。</td>
+       <td><b>２ 制作活動</b><br><ul><li>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）：商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していきました。</ul></td>
       </tr>
       <tr>
          <td><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"><br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
-         <td><b>進捗状況（６月）</b><br>商店街の区画は教師サイドで準備し，児童には町のマップと担当の店舗を伝えた。店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</td>
+         <td><b>進捗状況（６月）</b><br><ul><li>商店街の区画は教師サイドで準備し，児童には町のマップと担当の店舗を伝えた。店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</ul></td>
       </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/occho6gatsu.jpg" alt="八町大路建設途上" width="100%"><br><img src="https://tkby.github.io/micra.github.io/7・9haccho.jpg" alt="八町大路709" width="100%"></td>
-       <td><b>進捗状況（７月）</b><br>作業が進んでいる児童が担当している店舗は，完成に近づいているのが分かります。</td>  
+       <td><b>進捗状況（７月）</b><br><ul><li>作業が進んでいる児童が担当している店舗は，完成に近づいているのが分かります。</ul></td>  
       </tr> 
       <tr>
           <td><img src="https://tkby.github.io/micra.github.io/haccho11gatsu.jpg" alt="八町大路完成 " width="100%"></td>
-          <td><b>３．制作物の評価・改善（10月中旬～11月上旬）</b><br>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィールにし，比較・分析の後，制作物の評価・改善を行いました。</td>
+          <td><b>３．制作物の評価・改善（10月中旬～11月上旬）</b><br><ul><li>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィールにし，比較・分析の後，制作物の評価・改善を行いました。</ul></td>
       </tr> 
       <tr>
           <td><img src="https://tkby.github.io/micra.github.io/sala・de.jpg" alt="サーラ・デ・マイクラ " width="100%"><br><img src="https://tkby.github.io/micra.github.io/takeyoihaccho.jpg" alt="竹宵八町マイクラ " width="100%"></td>
-          <td><b>４.完成した商店街で祭りを表現（11月中旬）</b><br>商店街の完成後，祭りの雰囲気を出すために，商店街を「緑のろうそく」等で飾りつけをしました。時間を夜に設定して，19人～21人のマルチプレイで商店街を散策して祭りを楽しみました。<br>※実際の祭りが2021年度は規模縮小ながら例年通り実施されることが分かり，１０月以降の活動の中心は例年通り「竹ぼんぼり作り」に戻りました。そのため，当初予定していた校舎に投映するイベントは行いませんでした。</td>
+          <td><b>４.完成した商店街で祭りを表現（11月中旬）</b><br><ul><li>商店街の完成後，祭りの雰囲気を出すために，商店街を「緑のろうそく」等で飾りつけをしました。時間を夜に設定して，19人～21人のマルチプレイで商店街を散策して祭りを楽しみました。<br>※実際の祭りが2021年度は規模縮小ながら例年通り実施されることが分かり，１０月以降の活動の中心は例年通り「竹ぼんぼり作り」に戻りました。そのため，当初予定していた校舎に投映するイベントは行いませんでした。</ul></td>
       </tr>
    </table>  
         
