--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -63,7 +63,7 @@
       </tr>
       <tr>
          <td>環境</td>
-         <td>1人～2人に1台<b>制作用iPadと情報収集用iPad</b></td>
+         <td><ul><li>1人～2人に1台<b>制作用iPadと情報収集用iPad</b><li>作業用iPad用回線としてレンタルモバイルルーター(WiMax L01s)を使用</ul></td>
       </tr>
       <tr>
          <td>教科・領域</td>
