--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -104,7 +104,7 @@
       </tr> 
       <tr>
           <td><img src="https://tkby.github.io/micra.github.io/sala・de.jpg" alt="サーラ・デ・マイクラ " width="100%"><br><img src="https://tkby.github.io/micra.github.io/takeyoihaccho.jpg" alt="竹宵八町マイクラ " width="100%"></td>
-          <td><b>４.完成した商店街で祭りを表現（11月中旬）</b><br><ul><li>商店街の完成後，祭りの雰囲気を出すために，商店街を「緑のろうそく」等で飾りつけをしました。時間を夜に設定して，19人～21人のマルチプレイで商店街を散策して祭りを楽しみました。<br>※実際の祭りが2021年度は規模縮小ながら例年通り実施されることが分かり，１０月以降の活動の中心は例年通り「竹ぼんぼり作り」に戻りました。そのため，当初予定していた校舎に投映するイベントは行いませんでした。</ul></td>
+          <td><b>４.完成した商店街で祭りを表現（11月中旬）</b><br><ul><li>商店街の完成後，祭りの雰囲気を出すために，商店街を「緑のろうそく」等で飾りつけをしました。時間を夜に設定して，19人～21人のマルチプレイで商店街を散策して祭りを楽しみました。<li>実際の祭りが2021年度は規模縮小ながら例年通り実施されることが分かり，１０月以降の活動の中心は例年通り「竹ぼんぼり作り」に戻りました。そのため，当初予定していた校舎に投映するイベントは行いませんでした。</ul></td>
       </tr>
    </table>  
         
