--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -79,7 +79,7 @@
       </tr>
       <tr>
        <td><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="ルーブリックによるパフォーマンス評価" width="100%"></td>
-       <td><b>１　目標提示</b><br><ul><li>１.目標の共有（５月末）<br><li>実施事例は５月末～７月中旬，10月中旬～11月中旬の二期に分けた長期間の活動でした。長期的視点を養うために，活動のゴールを目指す目標を５月末に設定しました。<li>目標は「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始しました。<li>２.意識づけ<br>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</ul></td>
+       <td><b>１　目標提示</b><br><ul><li>１.目標の共有（５月末）<br><ul><li>実施事例は５月末～７月中旬，10月中旬～11月中旬の二期に分けた長期間の活動でした。<li>長期的視点を養うために，活動のゴールを目指す目標を５月末に設定しました。<li>「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現する。」という目標を共有して，活動を開始しました。</ul><li>２.意識づけ<ul><li>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</ul></ul></td>
        </td>
       </tr>
   <tr>
