--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -39,7 +39,7 @@
            </tr>
       <tr>
          <td>学習活動名</td>
-       <td>「地域の祭りと商店街をデジタルで表現しよう」/td>
+       <td>「地域の祭りと商店街をデジタルで表現しよう」</td>
       </tr>
       <tr>
          <td>学年</td>
