--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -51,7 +51,7 @@
       </tr>
       <tr>
        <td>使用教材（ホスト機）<br><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="Win版Minecraft" width="30%"></td>
-       <td><b>Windows版Minecraft( ※Java版ではない)をインストールしたPC</b><br><ul><li>Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。<li>統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</ul></td>
+       <td><b>Windows版Minecraft( ※Java版ではない)をインストールしたPC</b><br>参考スペック<ul><li>プロセッサー:intel COREi3<li>メモリ:8GB</ul><br><ul><li>Microsoft Education A3以上を導入している自治体は，Minecraft Education Edition(マインクラフト教育版)が使用できます。<li>統合版にはない様々な機能があるので，授業で使う際はMinecraft Education Editionの方がベターです。</ul></td>
       </tr>
       <tr>
          <td>使用教材（制作用）<br><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="Win版Minecraft" width="50%"></td>
