--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -71,7 +71,7 @@
       </tr>
       <tr>
          <td>活動設定の背景</td>
-         <td>O県U市で毎年11月に行われる祭りは，城下町が「竹ぼんぼり」でライトアップされる幻想的な祭りであり，県内外から観光客が訪れます。F小学校は，例年，学校行事に「竹ぼんぼり」づくりを組み込んでいましたが，2020年度は，コロナ禍により，祭りが中止となりました。2021年度も，祭りの開催が危ぶまれたので，代替の活動として地域の商店街と祭りをデジタルで表現する活動を設定しました。11月半ばに，マインクラフトで作った商店街を飾りつけプロジェクターで校舎に投映し，「デジタル祭り」を鑑賞して活動は終了です。</td>
+         <td>O県U市で毎年11月に行われる祭りは，城下町が「竹ぼんぼり」でライトアップされる幻想的な祭りであり，県内外から観光客が訪れます。F小学校は，例年，学校行事に「竹ぼんぼり」づくりを組み込んでいましたが，2020年度は，コロナ禍により，祭りが中止となりました。2021年度も，祭りの開催が危ぶまれたので，代替の活動として地域の商店街と祭りをデジタルで表現する活動を設定しました。11月半ばに，マインクラフトで作った商店街を飾りつけプロジェクターで校舎に投映し，「デジタル祭り」を鑑賞するのが活動のゴールです。</td>
       </tr>
         <tr>
          <td><b>活動の様子</b></td>
