--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -88,7 +88,7 @@
   </tr>
        <tr>
        <td><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
-        <td><b>２ 制作活動</b><br><ul><li>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）<ul><li>商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していきました。<li>基本的にペア活動とし，活動当初はペアの１人が制作，もう一人が情報収集しながら補助をしました。</ul></ul></td>
+        <td><b>２ 制作活動</b><br><ul><li>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）<ul><li>商店街について１人１店舗調べ，調べた店舗をマインクラフトで制作していきました。<li>基本的にペア活動とし，ペアの１人が制作，もう一人が情報収集しながら15分交代で協力して作業を進めていきました。</ul></ul></td>
       </tr>
       <tr>
          <td><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"><br><img src="https://tkby.github.io/micra.github.io/625haccho.jpg" alt="八町大路625" width="100%"></td>
