--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -63,7 +63,7 @@
       </tr>
       <tr>
          <td>環境</td>
-       <td><b>制作用端末</b><ul><li>1人～2人にiPad1台<li>機種はiPad Air2(2015)19～21台</ul><br><b>情報収集用iPad</b><ul><li>1人～2人にiPad1台<li>機種はキーボード付きGIGA端末19～21台</ul><br><b>通信環境</b><ul><li>作業用iPad回線としてレンタルモバイルルーター(WiMax L01s)を使用</ul></td>
+       <td><b>制作用端末</b><ul><li>1人～2人にiPad1台<li>機種はiPad Air2(2015)19～21台</ul><br><b>情報収集用iPad</b><ul><li>1人～2人にiPad1台<li>機種はキーボード付きGIGA端末19～21台</ul><br><b>通信環境</b><ul><li>作業用iPad回線としてレンタルモバイルルーター(WiMax L01s)で19～21台を接続</ul></td>
       </tr>
       <tr>
          <td>教科・領域</td>
